WEB-2378 fixed word wrapping for long filenames

--- a/fid-web/src/main/webapp/style/featureStyles/fileUpload.css
+++ b/fid-web/src/main/webapp/style/featureStyles/fileUpload.css
@@ -109,6 +109,7 @@ p.fileUploadShow label{
 
 .imageUploadPreview .ellipsis_text, .previewImageLabel .ellipsis_text{
 	width: 200px;
+	word-wrap: break-word;
 }
 
 .imageUploadPreview span a{ 
